2012-04-26 Carsten Haitzler (The Rasterman)

	* 1.0.0 release

2012-04-27 Daniel Juyung Seo (SeoZ)

	* Genlist : Fixed genlist expandable effect bug when we expand/contract
	  items with many children very quickly.
	* Genlist : Realize move items during tree effect only when the item is
	  not in the queue.

2012-04-30 Jérôme Pinot

	* Add missing files in the tarballs.

2012-05-02 Carsten Haitzler (The Rasterman)

	* Fix possible problems with other subsystems depending on X11 display
	  being closed (XCloseDisplay not close() on socket fd).

2012-05-02 ChunEon Park (Hermet)

	* Font: actually it doesnt append the font to the hash when font_hash is
	  created inside. Now it is fixed.

2012-05-03 Shilpa Onkar Singh
	* naviframe: Bug Fix: Wrong signal sent when title/subtitle is set in
	  naviframe.

2012-05-13  Dave Andreoli

	* Fileselector: honor folder_only when using EIO (backport 70965)

2012-05-14  Shinwoo Kim

	* menu: remove crash issue when no-parent item is passed to the
	  elm_menu_item_separator_add()

2012-05-04  Shinwoo Kim (kimcinoo)

	* popup: Bug Fix: improper usage of textblock

2012-05-16  Tom Hacohen (TAsn)

	* Fix fileselector selection done bug and pass the right string.

2012-05-28 Mike Blumenkrantz

	* Fix sizing calc error in list item homogenizing

2012-05-29 Mike Blumenkrantz

        * Collapsing tree items in genlist now animate properly

2012-05-30 Mike Blumenkrantz

        * Fix even/odd signals for genlist items

2012-05-31 WooHyun Jung

	* child_can_focus should be EINA_FALSE only when all children in the object
	  tree are not focusable. Before this fix, it was EINA_FALSE when all sub
	  objects were not focusable. (i.e. didn't check whole object tree)

2012-06-01 Mike Blumenkrantz

        * Re-setting the current mirrored mode state no longer causes a full recalc

2012-06-07 Mike Blumenkrantz

        * 1.0.1 release